# puzzle-solver

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cc.DACD0E40E5A52FF2.idx
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt  main.cc  matrix.h
src/puzzlelib/: CMakeLists.txt  cell.cc  cell.h  node.h  puzzle.cc  puzzle.h  puzzle_def.cc  puzzle_def.h  puzzle_parser.cc  puzzle_parser.h  rule.cc  rule.h
test/: CMakeLists.txt  main.cc
test/src/: puzzlelib_tests.cc
